<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

        <android.support.v7.widget.CardView
                android:id="@+id/cardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp">

            <TextView
                    android:id="@+id/tvScheduleDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    tools:text="match date"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearCard"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                    <ImageView
                            android:id="@+id/homeImg"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            tools:src="@drawable/ic_launcher_background"/>
                    <TextView
                            android:id="@+id/tvHomeDetailName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            tools:text="Home team"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tvHomeDetailScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2"
                            android:textSize="32sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vs"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tvAwayDetailScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="2"
                            android:textSize="32sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                    <ImageView
                            android:id="@+id/awayImg"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            tools:src="@drawable/ic_launcher_background"/>
                    <TextView
                            android:id="@+id/tvAwayDetailName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            tools:text="Away team"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tvHomeGoals"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="name"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/goals"/>
            <TextView
                    android:id="@+id/tvAwayGoals"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="12sp"
                    tools:text="name"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tvHomeShoots"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="0"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/shoots"/>
            <TextView
                    android:id="@+id/tvAwayShoots"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="right"
                    tools:text="0"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSeparator"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:text="@string/lineups"
                android:textStyle="bold"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSeparator"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:id="@+id/tvGkHome"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/goal_keeper"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:textAlignment="textEnd"
                    android:id="@+id/tvGkAway"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:id="@+id/tvDefHome"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/defense"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:textAlignment="textEnd"
                    android:id="@+id/tvDefAway"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:id="@+id/tvMidHome"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:text="@string/midfield"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:textAlignment="textEnd"
                    android:id="@+id/tvMidAway"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:id="@+id/tvForwardHome"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/forward"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:textAlignment="textEnd"
                    android:id="@+id/tvForwardAway"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSeparator"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:text="@string/subtitutes"
                android:textStyle="bold"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSeparator"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:id="@+id/tvSubHome"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    tools:text="name"
                    android:textAlignment="textEnd"
                    android:id="@+id/tvSubAway"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>