<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Spinner
            android:id="@+id/spTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </Spinner>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
            android:id="@+id/teamProgressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"/>


</LinearLayout>